# rss-parser

./: Cargo.toml
configs/: attackerdb.json
scripts/: rss-manage.sh
src/: main.rs
