[package]
name = "rss-parser"
version = "0.1.0"
authors = ["kali"]
edition = "2018"

[profile.release]
debug = 0

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = { version = "1.0.137" }
feed-rs = "1.0"
clap = "2.34.0"
iced = "0.3.0"
select = "0.5.0"
tokio = { version = "1.17.0", features = [ "full" ] }
reqwest = { version = "0.11.8", features = ["blocking", "json"] }
regex = { version = "1.5.4" }
